# pico-synth

./: .gitignore  CMakeLists.txt  midi.c  midi.cpp  midi.h  picosyn.ino  plan.txt
designs/picosyn/: picosyn.kicad_prl  picosyn.kicad_pro  picosyn.kicad_sch
include/: controls.h  interface.h  midi.h  picosyn.h  voice.h
scripts/: generate_frequencies.py  generate_tables.py  generate_wavetables.py
src/: CMakeLists.txt  controls.c  frequencies.h  interface.c  midi.c  midi.h  old_freq.h  picosyn copy.c  picosyn.c  tables.h  voice.c  wavetables.h
src/old/: tables.h
tests/: CMakeLists.txt  mocks.c  mocks.h  tests.c
